--- a/popup_html.html
+++ b/popup_html.html
@@ -4,190 +4,228 @@
     <meta charset="utf-8">
     <style>
         body {
-            width: 400px;
-            padding: 20px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            width: 420px;
+            padding: 0;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Inter', 'Roboto', sans-serif;
             margin: 0;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            min-height: 500px;
+            background: #0a0a0a;
+            color: #e0e0e0;
+            min-height: 550px;
         }
 
         .header {
-            text-align: center;
-            margin-bottom: 20px;
+            background: #111;
+            border-bottom: 1px solid #222;
+            padding: 20px;
+            margin-bottom: 0;
         }
 
         .header h1 {
             margin: 0;
-            font-size: 24px;
-            font-weight: 600;
-            text-shadow: 0 2px 4px rgba(0,0,0,0.3);
+            font-size: 20px;
+            font-weight: 700;
+            letter-spacing: -0.5px;
+            color: #fff;
+        }
+
+        .content-wrapper {
+            padding: 20px;
         }
 
         .api-setup {
-            background: rgba(255,255,255,0.1);
-            border-radius: 10px;
-            padding: 15px;
-            margin-bottom: 20px;
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255,255,255,0.2);
+            background: #111;
+            border: 1px solid #222;
+            padding: 16px;
+            margin-bottom: 16px;
         }
 
         .api-setup input {
             width: 100%;
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            font-size: 14px;
-            background: rgba(255,255,255,0.9);
-            color: #333;
+            padding: 12px;
+            border: 1px solid #333;
+            font-size: 13px;
+            background: #1a1a1a;
+            color: #e0e0e0;
             box-sizing: border-box;
+            font-family: 'Courier New', monospace;
+            transition: border-color 0.2s;
+        }
+
+        .api-setup input:focus {
+            outline: none;
+            border-color: #0ea5e9;
         }
 
         .api-setup label {
             display: block;
-            margin-bottom: 5px;
-            font-size: 12px;
-            opacity: 0.9;
+            margin-bottom: 8px;
+            font-size: 11px;
+            color: #888;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+            font-weight: 600;
         }
 
         .controls {
-            display: flex;
-            gap: 10px;
-            margin-bottom: 20px;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 12px;
+            margin-bottom: 16px;
         }
 
         button {
-            flex: 1;
-            padding: 12px;
-            border: none;
-            border-radius: 8px;
+            padding: 12px 16px;
+            border: 1px solid #333;
             cursor: pointer;
-            font-size: 14px;
+            font-size: 13px;
             font-weight: 600;
-            background: rgba(255,255,255,0.2);
-            color: white;
-            border: 1px solid rgba(255,255,255,0.3);
-            transition: all 0.3s ease;
+            background: #1a1a1a;
+            color: #e0e0e0;
+            transition: all 0.15s ease;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+            font-family: inherit;
         }
 
         button:hover {
-            background: rgba(255,255,255,0.3);
-            transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+            background: #222;
+            border-color: #0ea5e9;
+            color: #0ea5e9;
+        }
+
+        button:active {
+            background: #111;
         }
 
         button:disabled {
-            opacity: 0.5;
+            opacity: 0.4;
             cursor: not-allowed;
-            transform: none;
+            border-color: #333;
+            color: #666;
+        }
+
+        button:disabled:hover {
+            background: #1a1a1a;
+            border-color: #333;
+            color: #666;
         }
 
         .question-section {
-            background: rgba(255,255,255,0.1);
-            border-radius: 10px;
-            padding: 15px;
-            margin-bottom: 20px;
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255,255,255,0.2);
+            background: #111;
+            border: 1px solid #222;
+            padding: 16px;
+            margin-bottom: 16px;
         }
 
         .question-input {
             width: 100%;
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
+            padding: 12px;
+            border: 1px solid #333;
             resize: vertical;
-            min-height: 60px;
-            font-size: 14px;
+            min-height: 80px;
+            font-size: 13px;
             font-family: inherit;
-            background: rgba(255,255,255,0.9);
-            color: #333;
+            background: #1a1a1a;
+            color: #e0e0e0;
             box-sizing: border-box;
+            line-height: 1.5;
+            transition: border-color 0.2s;
+        }
+
+        .question-input:focus {
+            outline: none;
+            border-color: #0ea5e9;
+        }
+
+        .question-input::placeholder {
+            color: #555;
         }
 
         .response-area {
-            background: rgba(255,255,255,0.1);
-            border-radius: 10px;
-            padding: 15px;
-            max-height: 300px;
+            background: #111;
+            border: 1px solid #222;
+            padding: 16px;
+            max-height: 320px;
             overflow-y: auto;
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255,255,255,0.2);
         }
 
         .response-content {
-            font-size: 14px;
-            line-height: 1.6;
+            font-size: 13px;
+            line-height: 1.7;
             white-space: pre-wrap;
+            color: #d0d0d0;
+        }
+
+        .response-content.centered {
+            text-align: center;
         }
 
         .loading {
             text-align: center;
-            opacity: 0.8;
+            opacity: 0.6;
             font-style: italic;
+            color: #888;
         }
 
         .error {
-            color: #ff6b6b;
-            background: rgba(255,107,107,0.1);
-            padding: 10px;
-            border-radius: 5px;
-            border-left: 3px solid #ff6b6b;
+            color: #ef4444;
+            background: #1a0a0a;
+            padding: 12px;
+            border-left: 2px solid #ef4444;
         }
 
         .status {
-            font-size: 12px;
-            opacity: 0.8;
+            font-size: 11px;
+            color: #666;
             text-align: center;
-            margin-bottom: 15px;
+            margin-bottom: 16px;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+            font-weight: 600;
         }
 
         .scrollbar::-webkit-scrollbar {
-            width: 6px;
+            width: 8px;
         }
 
         .scrollbar::-webkit-scrollbar-track {
-            background: rgba(255,255,255,0.1);
-            border-radius: 3px;
+            background: #0a0a0a;
         }
 
         .scrollbar::-webkit-scrollbar-thumb {
-            background: rgba(255,255,255,0.3);
-            border-radius: 3px;
+            background: #333;
         }
 
         .scrollbar::-webkit-scrollbar-thumb:hover {
-            background: rgba(255,255,255,0.5);
+            background: #444;
         }
     </style>
 </head>
 <body>
     <div class="header">
-        <h1>🤖 Article Analyzer</h1>
+        <h1>ARTICLE ANALYZER</h1>
     </div>
 
-    <div class="api-setup">
-        <label>Google Gemini API Key:</label>
-        <input type="password" id="apiKey" placeholder="Enter your Gemini API key">
-    </div>
+    <div class="content-wrapper">
+        <div class="api-setup">
+            <label>Gemini API Key</label>
+            <input type="password" id="apiKey" placeholder="Enter API key">
+        </div>
 
-    <div class="status" id="status">Ready to analyze</div>
+        <div class="status" id="status">Ready to analyze</div>
 
-    <div class="controls">
-        <button id="summarizeBtn">📝 Summarize</button>
-        <button id="extractBtn">📄 Extract Text</button>
-    </div>
+        <div class="controls">
+            <button id="summarizeBtn">Summarize</button>
+            <button id="extractBtn">Extract</button>
+        </div>
 
-    <div class="question-section">
-        <textarea id="questionInput" class="question-input" placeholder="Ask a specific question about this article..."></textarea>
-        <button id="askBtn" style="width: 100%; margin-top: 10px;">🔍 Ask Question</button>
-    </div>
+        <div class="question-section">
+            <textarea id="questionInput" class="question-input" placeholder="Ask a specific question about this article..."></textarea>
+            <button id="askBtn" style="width: 100%; margin-top: 12px;">Ask Question</button>
+        </div>
 
-    <div class="response-area scrollbar" id="responseArea">
-        <div class="response-content" id="responseContent">
-            Welcome! Enter your Gemini API key above, then click "Summarize" to get a summary of the current page, or ask specific questions about the content.
+        <div class="response-area scrollbar" id="responseArea">
+            <div class="response-content centered" id="responseContent">Enter your Gemini API key above, then click "Summarize" to analyze the current page, or ask specific questions about the content.</div>
         </div>
     </div>
 
